<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageBack"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat= "@drawable/ic_baseline_arrow_back_24"/>


    <TextView
        android:id="@+id/TextProfileTitle"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageBack"

        />

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/LayoutTextTitle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Title"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TextProfileTitle"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        >


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TitleInput"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            />
    </com.google.android.material.textfield.TextInputLayout>





    <TextView
        android:id="@+id/TextProfileDescription"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/LayoutTextTitle"

        />

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/LayoutTextDescription"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TextProfileDescription"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        >


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/DescriptionInput"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/TextProfileDate"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="25dp"
        android:text="@string/date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/LayoutTextDescription"

        />

    <TextView

        android:id="@+id/TextDateChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:padding="20dp"

        app:layout_constraintTop_toBottomOf="@id/TextProfileDate"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="45dp"

        />


    <TextView
        android:id="@+id/TextProfileTime"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:text="@string/time"
        app:layout_constraintStart_toEndOf="@id/TextProfileDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/LayoutTextDescription"


        />



    <TextView
        android:id="@+id/TextTimeChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:padding="20dp"

        app:layout_constraintStart_toEndOf="@id/TextDateChange"
        app:layout_constraintTop_toBottomOf="@id/TextProfileTime"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginStart="45dp"

        />



    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TextDateChange"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>


