<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/mainLinearLayoutInbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:background="?android:selectableItemBackground"

        >

        <TextView
            android:id="@+id/mainTextInbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inbox"
            style="@style/TextAppearance.MaterialComponents.Headline4"
            android:textStyle="bold"

            />

        </LinearLayout>



        <LinearLayout
        android:id="@+id/mainLinearLayoutToday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainLinearLayoutInbox"
        app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:background="?android:selectableItemBackground"

            >

        <TextView
            android:id="@+id/mainTextToday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/today"
            style="@style/TextAppearance.MaterialComponents.Headline4"

            android:textStyle="bold"

            />
        </LinearLayout>



    <LinearLayout
        android:id="@+id/mainLinearLayoutUpcomingWeek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainLinearLayoutToday"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:background="?android:selectableItemBackground"

        >

        <TextView
            android:id="@+id/mainTextUpComingWeek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upcomingweek"
            style="@style/TextAppearance.MaterialComponents.Headline4"
            android:textStyle="bold"

            />
    </LinearLayout>



    <LinearLayout
        android:id="@+id/mainLinearLayoutCalendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainLinearLayoutUpcomingWeek"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:background="?android:selectableItemBackground"
        >


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>


<!--<TextView-->
<!--android:id="@+id/mainTextCalendar"-->
<!--android:layout_width="wrap_content"-->
<!--android:layout_height="wrap_content"-->
<!--android:text="@string/calendar"-->
<!--style="@style/TextAppearance.MaterialComponents.Headline4"-->
<!--android:textStyle="bold"-->

<!--    />-->